# rust_typescript_dockerized

./: README.md  docker-compose.yml
api/: .env  Cargo.toml  Dockerfile
api/migrations/2020-07-13-123444_create_employees/: up.sql
api/src/: actions.rs  main.rs
api/src/employees/: model.rs  route.rs
terraform/: main.tf
web/: Dockerfile  package.json  tsconfig.json  tslint.json
web/src/: App.tsx  index.tsx
