[package]
name = "hello-world"
version = "0.1.0"
authors = ["andrea <andrea.cristina.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
listenfd = "0.3"
serde_json = "1.0"
diesel = { version = "1.4.2", features = ["postgres", "r2d2"] }
r2d2 = "0.8"
bytes = "0.5"
dotenv = "0.15"
env_logger = "0.7"
futures = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
